# FastCSV-C

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  arena.c  arena.h  csv_config.c  csv_config.h  csv_parser.c  csv_parser.h  csv_reader.c  csv_reader.h  csv_utils.c  csv_utils.h  csv_writer.c  csv_writer.h
.github/workflows/: ci.yml  release.yml
tests/: Makefile  README.md  run_all_tests.c  test_arena.c  test_csv_config.c  test_csv_parser.c  test_csv_reader.c  test_csv_utils.c  test_csv_writer.c
